fix : removed extra margin for sortable customizer section

--- a/inc/assets/css/ast-builder-customizer-rtl.css
+++ b/inc/assets/css/ast-builder-customizer-rtl.css
@@ -1542,10 +1542,6 @@ li#customize-control-astra-settings-header-desktop-items, li#customize-control-a
     padding: 0 12px 2px;
 }
 
-.ahfb-sorter-row {
-    margin-bottom: 16px;
-}
-
 .ahfb-sorter-item-panel-content .components-button.button-add-media {
     display: block;
     margin-bottom: 20px;
